--- a/style.css
+++ b/style.css
@@ -10,9 +10,11 @@ body{
     top: 130px;
 }
 
-#horario{
+#horarios{
+    position: absolute;
+    display: flex;
     color: #ffff;
-    position: relative;
-    top: 100px;
-    font-size: 100px;
+    top: 120px;
+    left: 415px;
+    font-size: 60px;
 }
